--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
     </ul>
      
 <div class=title>
-This website is Awesome
+Twilight is an irrefutable Masterpiece
 </div>
 
 <div class="subtext">
-    Some subtext that goes on for a little bit about
-    twilight. Probably a description of the website.
-    Idk we will see.    
+    Twilight is a series of fantasy romance novels by Stephenie Meyer. It follows the 
+    life of Isabella "Bella" Swan, a human teenager who moves to Forks, Washington and 
+    finds her life turned upside-down when she falls in love with a vampire 
+    named Edward Cullen. Sign up below to become a fan!
 </div>
 
 <button class="sign-up">Sign up</button>
@@ -37,32 +38,33 @@ This website is Awesome
 <div class="body">
 
     <div class="content-title">
-    Some random Information.
+    The films that built us
     </div>
 
     <img src="imgs/twilight.jpeg">
     <div class="text">
-        some text about image1
+        Twilight: a blue tinted classic and unofficial sports film.
     </div>
 
     <img src="imgs/new-moon.jpeg" alt="new moon movie poster">
     <div class="text">
-        description
+        New Moon aka "Bella, where the hell have you been loca?""
     </div>
 
     <img src="imgs/eclipse.jpeg" alt="eclipse movie poster">
     <div class="text">
-        discription
+        Eclipse: Forgettable? Maybe, but never forgotten.
     </div>
         
     <img src="imgs/breaking-dawn1.jpeg" alt="breaking dawn part 1 movie poster">
     <div class="text">
-        description
+        Breaking Dawn: Part 1. Honeymoon.
     </div>
 
     <img src="imgs/breaking-dawn2.jpeg" alt="breaking dawn part 2 movie poster">
     <div class="text">
-        description
+        Breaking Dawn: Part 2 aka "You nicknamed my daughter after the lock ness 
+        monster??!"
     </div>
 
 <q class="quote">
@@ -85,12 +87,5 @@ This website is Awesome
 </div>
 
 </body>
-
-
-
-
-
-
-
 
 </html>
