Add styles and correct format

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="header"> 
     
     <div class="containter"> 
-     <div class="logo-text">  The Twilight Saga </div>
+     <div class="logo">
+        <img id="logo" src="../project-landing-page/imgs/twilight-logo.png" alt="image of 
+        edward and bella">      
+    </div>
     <ul class="links">
         <li>books</li>
         <li>films</li>
@@ -28,7 +31,7 @@ Twilight is an irrefutable Masterpiece.
 </div>
 
 <div class="subtext">
-    Twilight is a cult classic that changed the tragectory of the YA lit in the 2010s.
+    Twilight is a cult classic. This is a Twilight fan page. 
     Sign up below to become a fan!
 </div>
 
@@ -46,7 +49,7 @@ Twilight is an irrefutable Masterpiece.
 <div class="body">
 
     <div class="content-title">
-    The films that built us
+    The films that built us.
     </div>
 
     <div class="content">
@@ -68,7 +71,9 @@ Twilight is an irrefutable Masterpiece.
     
     <div class="info">
     <img src="imgs/breaking-dawn1.jpeg" alt="breaking dawn part 1 movie poster">
-    <div class="text">Breaking Dawn: Part 1. Honeymoon.</div>
+    <div class="text">Breaking Dawn: Part 1. I am going to let the image above 
+        speak for itself.
+    </div>
     </div>
 
     <div class="info">
@@ -78,25 +83,27 @@ Twilight is an irrefutable Masterpiece.
     </div>
 
     </div>
-<div class="quote">
-    "About three things I was absolutely positive. First, Edward was a vampire. Second,
-    there was a part of him-and I didn't know how potent that part might be-that 
+    <div class="quote-container">
+    <div class="quote">
+    About three things I was absolutely positive. First, Edward was a vampire. Second,
+    there was a part of him-and I didn't know how dominate that part might be-that 
     thirsted for my blood. And third, I was unconditionally and irrevocably in love
-    with him." - Bella Swan
-</div>
+    with him.<div class="bella">Bella Swan, Human</div> 
 
+</div>
+</div>
 <div class="action">
     <div class="container2">
     <div class="call-to-action">It's time!</div>
     <div class="action-subtext">Sign up to become a TwiHard, forever...</div>
     </div>
-    <button>Sign Up</button>
+    <button class="action-button">Sign Up</button>
 </div>
 
 </div>
 
 <div class="footer">
-    Twilight Forever
+    Twilight 4ever
 </div>
 
 </body>
